# mansion

./: .github  .gitignore  Gemfile  LICENSE.txt  Procfile  README.md  Rakefile  init_db.py  llm_repl.py  main.py  models.py  package.json  pyproject.toml  verify_db.py
.github/workflows/: ci.yml  standardrb.yml
CHANGELOG.md/: CHANGELOG.md
app/lib/: suumo_region_lookup.rb
app/views/layouts/: application.html.erb
app/views/pwa/: manifest.json.erb
architecture/: 2025-04-21-flexible-condo-search-adr.md  2025-04-22-structured-tools.md
chats/: round-2.1.json  round-2.json  round-2.md  round-3.json
config/: application.rb  credentials.yml.enc  database.yml  routes.rb
config/initializers/: searls_auth.rb
db/: schema.rb
db/migrate/: 20250423162322_create_users_and_listings.rb
lib/adapters/: suumo_adapter.py
lib/adapters/suumo/: persist.py  scrape.py
research/: suumo.md
scrapers/: athome.py  suumo.py
script/: generate_suumo_areas.py  scrape_suumo  searls_setup  setup
spikes/initial_vibe/: init_db.py  pyproject.toml
spikes/initial_vibe/research/: hoomuzu-new-manshon-results.html  hoomuzu-top-level-search.html  hoomuzu.md  suumo-new-manshon-results.html  suumo-used-manshon-results.html  suumo_areas.json
spikes/initial_vibe/scrapers/: lifeful.py  suumo.py
spikes/initial_vibe/script/: reset_db.py  setup
test/: application_system_test_case.rb
test/system/: suumo_test.rb
tests/support/: scrape_helper.py
tools/: enrich_tool.py  langchain_tools.py  print_tool.py  scrape_tool.py  test_scrape_tool.py  test_supporter.py
(+1 files in other folders)
